# retail-copilot

./: .gitignore  LICENSE  README.md
backend/: .gitignore  example.env  langgraph.txt  langgraphdocs.txt  main.py  pyproject.toml
backend/agents/: chart_agent.py  forecasting_agent.py  sql_agent.py  supervisor_L.py  supervisor_P.py  synthesizer_agent.py
backend/prompts/: chart_agent.txt  forecasting_agent.txt  prompt.txt  sql_agent.txt  supervisor.txt  synthesizer.txt
backend/tests/: conftest.py  test_chart_agent.py  test_e2e.py  test_forecasting_agent.py  test_sql_agent.py  test_supervisor.py  test_synthesizer.py  test_web_research_agent.py
backend2/: .gitignore  README.md  pyproject.toml
backend2/agents/: _llm.py  chart_agent.py  forecasting_agent.py  sql_agent.py  supervisor_L.py  supervisor_P.py  synthesizer_agent.py  web_research_agent.py
backend2/prompts/: chart_agent.txt  promptrules.txt  supervisor.txt  web_research_agent.txt
backend2/scripts/: load_data.py
design/: systemdesign.html
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: CodeBlock.jsx  Composer.jsx  Message.jsx
frontend/src/lib/: chatStream.js  monoNight.js
