[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dart>=1.0",
    "darts>=0.44.1",
    "duckdb>=1.5.3",
    "fastapi[standard]>=0.136.3",
    "kaggle>=2.1.2",
    "kagglehub>=0.4.1,<1.0",
    "kagglesdk>=0.1.10",
    "langchain>=1.3.2",
    "langgraph>=1.2.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "polars>=1.41.0",
    "prophet>=1.3.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "statsforecast>=2.0.2",
    "uvicorn>=0.48.0",
]
